--- a/Day 5 - Blurry Loading/index.html
+++ b/Day 5 - Blurry Loading/index.html
@@ -6,16 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Blurry Loading</title>
 </head>
+
+
 
 <body>
 
 
-<h1>Project Name</h1>
+<!-- Step 1 -->
+
+<!-- сама секция с фоном -->
+<section class="bg"></section>
+
+
+<!-- контейнер с цифрами набегающего прогресса -->
+<div class="loading-text">0%</div>
+
+
 
 
 <script src='script.js'></script>
 </body>
-
 </html>
